Adicion de una listview para mostrar las pruebas, estadisticas de los grupos y envio de datos

--- a/GPSSample/app/src/main/res/values/strings.xml
+++ b/GPSSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">GPSSample</string>
+    <string name="app_name">RALLY</string>
     <string name="ipBase">192.168.100.4</string>
 </resources>
